
**    PSL support was removed, please use System Verilog assertions.

**    SystemPerl mode is deprecated and now untested.

***   Support enum.first/name and similar methods, bug848. [Jonathon Donaldson]

***   Add 'string' printing and comparisons, bug746, bug747, etc.

***   Inline C functions that are used only once, msg1525. [Jie Xu]


* Verilator 3.866 2014-11-15

***   Fix +define+A+B to define A and B to match other simulators, bug847. [Adam Krolnik]

***   Add optimization of wires from arrayed cells, msg1447. [Jie Xu]

***   Add optimization of operators between concats, msg1447. [Jie Xu]

***   Add public enums, bug833. [Jonathon Donaldson]

***   Trace_off now operates on cells, bug826. [Lane Brooks]

****  Fix public parameters in unused packages, bug804. [Jonathon Donaldson]

****  Fix select when partially out-of-bound, bug823. [Cliffort Wolf]

****  Fix generate unrolling with function call, bug830. [Steven Slatter]

****  Fix cast-to-size context-determined sizing, bug828. [Geoff Barrett]

****  Fix not tracing modules following primitives, bug837. [Jie Xu]

****  Fix trace overflow on huge arrays, bug834. [Geoff Barrett]

****  Fix quoted comment slashes in defines, bug845. [Adam Krolnik]


* Verilator 3.864 2014-09-21

***   Support power operator with real, bug809. [Jonathon Donaldson]

****  Improve verilator_profcfunc time attributions. [Jonathon Donaldson]

****  Fix duplicate anonymous structures in $root, bug788. [Bob Newgard]

****  Fix mis-optimization of bit-swap in wide signal, bug800. [Jie Xu]

****  Fix error when tracing public parameters, bug722. [Jonathon Donaldson]

****  Fix dpiGetContext in dotted scopes, bug740. [Geoff Barrett]

****  Fix over-shift structure optimization error, bug803. [Jeff Bush]

****  Fix optional parameter keyword in module #(), bug810. [Iztok Jeras]

****  Fix $warning/$error multi-argument ordering, bug816. [Jonathon Donaldson]

****  Fix clang warnings, bug818. [Iztok Jeras]
